New CSS and HTML Divs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 <body>
   
-  <center><h1 style="background-color:#A2C1AD;" id="Title">The Stages Of Ceramics</h1></center>
+  <div id="Div1"><center><h1 style="background-color:#A2C1AD;" id="Title">The Stages Of Ceramics</h1></center></div>
 
+  <div id="Div2">
   <center><h3 class="Minor_Titles">Greenware</h3></center>
 
   <p class="Minor_Text">Greenware is the <strong>first stage</strong> in the life of clay. It covers all <em>substages</em> of unfired pottery such as:</p>
@@ -72,6 +73,7 @@
  <img class="photo" src="Glazeware_2.jpeg" alt="Rows of bowls, jars, cups, plates, and vessels still on the kilns racks.">
 
  <img class="photo" src="Glazeware_3.png" alt="Glazed teacups in an assortment of colors all lined up in rows to create a pattern."></center>
+    </div>
   
 </body>
 
