--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
 
 <body>
   
-  <div id="Div1"><center><h1 style="background-color:#A2C1AD;" id="Title">The Stages Of Ceramics</h1></center></div>
+  <div id="Div1"><center><h1>The Stages Of Ceramics</h1></center></div>
 
+<br> <br>
+  
   <div id="Div2">
-  <center><h3 class="Minor_Titles">Greenware</h3></center>
+
+  <div class="Div4">
+    
+  <center><div class="Div3"><h3 class="Minor_Titles">Greenware</h3></div></center>
 
   <p class="Minor_Text">Greenware is the <strong>first stage</strong> in the life of clay. It covers all <em>substages</em> of unfired pottery such as:</p>
 
@@ -35,7 +40,13 @@
 
 <img class="photo" src="IMG_1300 2.jpg" alt="A bone dry terracotta stamp with a logo of two ceramic vessels carved into it."></center>
 
-  <center><h3 class="Minor_Titles">Bisqueware</h3></center>
+  </div>
+
+    <br> <br>
+
+  <div class="Div4">
+    
+  <center><div class="Div3"><h3 class="Minor_Titles">Bisqueware</h3></div></center>
 
   <p class="Minor_Text">Bisqueware is the <strong>intermediate</strong> stage of ceramics. Bisqueware is what you get when <em>greenware has been fired in the kiln once</em>. You fire greenware only at the bone dry stage. The water stored inside the clay in other stages of greenware will turn to steam causing your vessel to explode. Some properites and facts about Bisqueware are:</p>
 
@@ -55,7 +66,13 @@
 
   <img class="photo" src="bisque_3.jpeg" alt="A head on photo of three white colored bisqueware glaze test vessels."></center>
 
-   <center><h3 class="Minor_Titles">Glazeware</h3></center>
+  </div>
+
+    <br> <br>
+
+  <div class="Div4">
+
+   <center><div class="Div3"><h3 class="Minor_Titles">Glazeware</h3></div></center>
 
   <p class="Minor_Text">Glazeware is the final stage of ceramics. Glazeware is bisquare which has been glazed and then fired again. The glaze melts and vitrifies into glass. Glazes can be colorful or clear, shiny or matte, irridescent, spotty, and gradated. Some facts about Glazeware include:</p>
   
@@ -74,6 +91,8 @@
 
  <img class="photo" src="Glazeware_3.png" alt="Glazed teacups in an assortment of colors all lined up in rows to create a pattern."></center>
     </div>
+
+  </div>
   
 </body>
 
