--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>The Stages Of Ceramics</title>
+  <title>The Stages of Ceramics</title>
   <meta charset="utf-8">
    <link rel="shortcut icon" type="image/x-icon" href="IMG_1300 2.jpg"/>
 
@@ -16,7 +16,7 @@
 
 <body>
   
-  <div id="Div1"><center><h1>The Stages Of Ceramics</h1></center></div>
+  <div id="Div1"><center><h1>The Stages of Ceramics</h1></center></div>
 
 <br> <br>
   
