--- a/index.html
+++ b/index.html
@@ -22,9 +22,42 @@
   
   <div id="Div2">
 
+      <div class="Div3"> 
+
+        <center>
+
+        <table>
+          <thead>
+            <tr>
+              <div class="Div4"><h3>Table of Contents</h3>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="img_link"><a href="#Green">Greenware (Unfired Pottery)</a></td>
+            </tr>
+            <tr>
+              <td class="img_link"><a href="#Bisque">Bisqueware (Fired Pottery)</a></td>
+            </tr>
+            <tr>
+              <td class="img_link"><a href="#Glaze">Glazeware (Finished Pottery)</a></td>
+            </tr>
+          </tbody>
+        </table>
+
+          </center>
+
+        <br>
+
+        </div>
+
+    </div>
+
+      <br> <br>
+
   <div class="Div3">
     
-  <center><div class="Div4"><h3 class="Minor_Titles">Greenware</h3></div></center>
+  <center><div class="Div4"><h3 class="Minor_Titles" id="Green">Greenware</h3></div></center>
 
   <p class="Minor_Text">Greenware is the <strong>first stage</strong> in the life of clay. It covers all <em>substages</em> of unfired pottery such as:</p>
 
@@ -50,7 +83,7 @@
 
   <div class="Div3">
     
-  <center><div class="Div4"><h3 class="Minor_Titles">Bisqueware</h3></div></center>
+  <center><div class="Div4"><h3 class="Minor_Titles" id="Bisque">Bisqueware</h3></div></center>
 
   <p class="Minor_Text">Bisqueware is the <strong>intermediate</strong> stage of ceramics. Bisqueware is what you get when <em>greenware has been fired in the kiln once</em>. You fire greenware only at the bone dry stage. The water stored inside the clay in other stages of greenware will turn to steam causing your vessel to explode. Some properites and facts about Bisqueware are:</p>
 
@@ -80,7 +113,7 @@
 
   <div class="Div3">
 
-   <center><div class="Div4"><h3 class="Minor_Titles">Glazeware</h3></div></center>
+   <center><div class="Div4"><h3 class="Minor_Titles" id="Glaze">Glazeware</h3></div></center>
 
   <p class="Minor_Text">Glazeware is the final stage of ceramics. Glazeware is bisquare which has been glazed and then fired again. The glaze melts and vitrifies into glass. Glazes can be colorful or clear, shiny or matte, irridescent, spotty, and gradated. Some facts about Glazeware include:</p>
   
